fix error in kustomization

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:QAWbxvtCNyuE25sn2BQa3yN4P5VQie1vvTMVIyd8RNpTIhA/9icEn1twcaJe3Uji3vosuA4UX7pI8baDOv44Vbc=,iv:yQK3m158NyJIuj3LR1eTXu7n/qFR3K2CZi5zEj3hxVk=,tag:9/vEI/3gcDtxVZWgtvsCpw==,type:comment]
-#ENC[AES256_GCM,data:sBGYUlYdVm4mBugyJGfnThr7oOo6PLxwNxmUNkIfYDIYBTPYzBLbCNYb7pg=,iv:xb1Lt6nQy9mWj8Tnkb7injqFM7CqtR/q63dV5TJkE+U=,tag:FDeh0/tu8UWsWjYmJdtn0A==,type:comment]
-VIP: ENC[AES256_GCM,data:uJT12YHQ+uMknwFT+A==,iv:fwRemzOoT5goeGb8Z23gGzvWEQZjhBux1rpyomkmdQY=,tag:7LEnrVcWOf/3B77fHY51IA==,type:str]
-#ENC[AES256_GCM,data:7RDdDPTmK45ieh+Jd21xMgziBVdmmyiQ1aJk,iv:74t01dKK+Ka1WW98OELplaOvp5rTjXBgB614r3KTJXA=,tag:L6vCcFNoEz9CjkZ7eXzxgg==,type:comment]
-#ENC[AES256_GCM,data:aDGnGp9MMwuU8qai//9ceZ5kFRABhb5LZiUl6joUBmrhM2OKPhSNvYCnMGJ0nKF4opUNpwNVjMXtMFCcJE9aWl9g2ofi+sfcXTlqoYGpFnYPHdvDjCW1wFI=,iv:9yR+qOwv5+1jZ9jQlKRqlHvA4qLDnDVXaoOKto1r67s=,tag:lOYGV70rq4caUf+6lktCvw==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:OnnPIvm5MulnLt9XvfM=,iv:XsBcLWzV3CzGRRlksKG12MvAi1o0kpKmR3whtKW5iN4=,tag:h4xa+5hMU3jjx9Sbe/v7kw==,type:str]
-#ENC[AES256_GCM,data:yHhaM3vMncrbhZC+8yu/z61HptLMFqlMYUxujtf52SOpdg==,iv:F4JTHylTGAZCoBwicFWqjbEw7h+lZPaOqRN0bEE2kro=,tag:n2Lzv1Zp0DEYBNX1HQGVMA==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:K76M9QFeJ1Eq+MPQTw==,iv:dggqxCrO9FFQAOg7MJ/McKyM5X9ZA1L5NP/EJVGNSvo=,tag:McQkbu3I/yMY1EoY9pKsMg==,type:str]
-#ENC[AES256_GCM,data:CZNX9i4yZXmJuRsFcvlYmBT3zRlJH/ekGT+1bwHWsY4WcspT545UF5utXPiOrxQ=,iv:c74HhbiEUeHvXiiqDlFBKkVwxnK7HDoQczkyniHnKqY=,tag:xldQfgWnbW6nWstrqLKCJg==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:zezDXB4oMKg+Wg6h7iUPT/QJi6jREq3LGOK1Dn//dQ==,iv:cTUQowFrcMnCozSf+tI7EoRYh+sseOptXt4V4OV5hsg=,tag:U5h0im4l9WMw7/mFPKDcCQ==,type:str]
-#ENC[AES256_GCM,data:yiwhZ3Y032bqw+c8LIFTqTY5em7wA6EJ+GUDkX/OMr+ENdIFUQ6+fIX61OyRM/FoY45lL8AUYGxcTTeWerrOfcpqdzcLmYz2LnC697+6v9IrLQ==,iv:7iJ0GmYFwQr5qMRLUw4BexrO8f5pbvf86dm8ZQF0NGk=,tag:nWfKbXJsw/3VPrr581oriA==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:hoRgEW7xxTwl+AJVCYZf,iv:atpSd4k4y7wyjRnVL7CJaR87HWBc465GGW11aDUB+wI=,tag:k21sEsKQrHggLnqAO/rFAQ==,type:str]
-#ENC[AES256_GCM,data:MWEjYUc5GUaRkoUTNMBTBQ/XrEV8VsgS1pM3Q43Ks/Lo,iv:hRXMKGVbKS46uBCZjerdbwnN61eEJI/APZwnciqOYEA=,tag:ysCLpCt10d1i+083R7cEIA==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:mODrFGFiAWdeQfuOQLhD,iv:TmaE1QNfbrMGhjfamjlW9oYKka+YyQusl/tGsQCF04g=,tag:xIUJMYKnUTMYpe0Wp0Kxgw==,type:str]
-#ENC[AES256_GCM,data:OduHf2bXfcMtAv/IDAwRi8JuTEJZ+FvQn14BgZ6Th7uydAMC6/5kGGxWplSAnQ1dXU6mLwbjawuHBceAQP2TbfYHMlZrcGwhKje6wFiU5Xs=,iv:I4EVLNJvnTNWORHmrqOW/i+iW4e6MfiuuBW8taBHuuY=,tag:BKvhBMt/WGgFJzx/KnT9zg==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:K04IBPrAbkfK4omwPEKv,iv:z/fHKK9smO6bjiDXv7HYdsfKZ6tinjy9PcqSREzLoa0=,tag:eNeV8AQdcmfkwvpjiUgSGg==,type:str]
-#ENC[AES256_GCM,data:jumCw1we/rUszBIZcP3lbsdyfcANRLXUbBYsZFxdGn4PIJDuDJb5LKwt6QCzoBIRVTGt/4OUUXJAZkYTX35HE2URsDUmd3AORRH1yjjEoazIHtxjlQVd,iv:hX/jQbopDE0S4BzhwpWx2Uc4oopGN3IGKr9a+DNkn/s=,tag:Q8Rn+gVedeKjeBP9a9KDcw==,type:comment]
-#ENC[AES256_GCM,data:1tGi6t1J/W0oDjOmAVyWYT/BCLZCPvNYClkZES9sumyMqI8L6ZLCIi/OxxrOisX+FG381rRJI7zhHEJB4QfS6kF+x1aWlZ4XMrYeRuzvqdNxQJjVGt/4mEkehNoJ4Mllwz/Cxt0LmrHhSSPQXdb7K6Y8CvzT2Ie0AT6Zcw==,iv:MiVbcZREGknLpUSBN/ClR8pcrAo0dgf90uEyhptPOTY=,tag:atmVWpvt4YM/rE6rhJIkkQ==,type:comment]
-#ENC[AES256_GCM,data:nZJL82mcHCsMWuzI6RPs3+5FEGXwydQZ8yEdLo5M4HHkJYMILleLKgKzLa/QOOdrr6dUMwkO5XNWeCcgrcu0r4L/AzkmETbVUbYZvv3xnXM=,iv:S4e99HN+AKB04lSJz0YCcL0P5GhyXi0VF9DmZEL5zgc=,tag:TJAiJ3G7OKSTvFcM77V1yA==,type:comment]
-#ENC[AES256_GCM,data:bA2IXhMJMCJd7if0Vv2rx6I5z0Uhi9xzKbFk/unsIPnR4VMHHwiwCyfgiU/U8PaUo/JjCHiY,iv:9WQru4L65wAmFzteX1andIRpMyiAPdBBghsYMnF0LS0=,tag:+pG/CSNnYlfy3737LzOE9g==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:m1e/oPK3NGn5XD4z,iv:cfKn/VQTFsLVj4RUcn+a5ZJqgYVL2SAEm/vNzdqE4y4=,tag:JI9vEIewxnK+ai3meob72Q==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:Q4xEwlEBxQ4FSmPIh3zPzyg=,iv:8TJSlO9Bx+iG+Rs8Z7XItKThz/zUjqL2wZFt+JLq+V0=,tag:apWtLMA5Xsp4YnYgaK3IhA==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:nNuZAjSaUJacQ+bOXGUwgnka2IgJ+5TySXY2RR1rDnQ=,iv:/QNYflDumhxqXeA/2uP2PA3OzNiQuPUf1cgbIoZxJhA=,tag:ZWV8Du2lXjkUQ7046w3U3w==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:+b17ADEyz6UHHKfvD2BkxrxH1f97+G6oSxwnCnH1eIWSkZpH9D0irg==,iv:MoYnBJ7QTN4+qa1gGF4hjJh6TaZADvVJDzjooxEt++M=,tag:b4L8M1w3pxb5WbxF11a7Og==,type:str]
-#ENC[AES256_GCM,data:5EG11Qw8EcgohK8QHzJCHn74Q/SMLPvSjC8t4GmLmyd793JJV0dj+7NJev0PYLKQqWjYAb4OMMZk38Fyy209Mg==,iv:aZlmVtGiMmlJnCcw1ApxxNaDviayHqXNCRPl99BWbL8=,tag:z7nFyJVEf8CzDBrVf0kRIw==,type:comment]
-#ENC[AES256_GCM,data:oc7mICnDiYN+VKFfMsppIjPb8omfrfJextSh66kS7ypnV3lE7OPa8t2xG1Cw1Hk0xBldhAcNS6g=,iv:poc6NpSCWWZ+NuH3Cnmy+UR5IsivCOKadm0Y/jbpIRY=,tag:rYLZe+do4QU2CiP2JWXGjg==,type:comment]
-#ENC[AES256_GCM,data:myqkM05xYBhNdaGFwLYeCbfiYGSuCzhiZQ==,iv:JkKHKNP0Y/9Zai8uzu3E8yTJcTBPkQnLsLaA4x2DpWM=,tag:0Ted/lL5Z/hpxPhC01OAng==,type:comment]
-#ENC[AES256_GCM,data:T8TjKkjDQBzajh04x9klJpOFrAn5rFjE7jA2uOcK/KGbehrT2KITbilXShyj0xDzuKrwRe9TiyZrmZYg+cGowzW3neoFI3BGjRnshi0=,iv:mXufT/oSpQjFyORU66Qu+nLgUWzoO2UcRMXVfCIdVfc=,tag:oghqvhKZ2OHFjMyrzn8pQQ==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:TQk9HlWdNLZWbjQD6XRsceLjxRA3Uc3SF/5a6lvLQEC0DNzwG6u5E8acyNvRchwk,iv:/6TynJ1r3chNP1VM/s1joILAKoffsGlbVvvMQkpXIlY=,tag:gV3OhRB7I1s67X9qO6zoVA==,type:str]
-#ENC[AES256_GCM,data:D02HrrtEmH1Sp/FHG2qj5RBY/sXiU61MsN+fmPrTV94lEm+pKerJtWvFtMQonfU+lpIKSnQBLv4ZDj82U6HplXLsbmsxhuU=,iv:BUJ1jSyyiDxSaidE3qouNfrQe5LLsnsbpqukhVKE7XM=,tag:nCiZyuj329SSzp7mrs4seQ==,type:comment]
-#ENC[AES256_GCM,data:PdL+Lzrwt5n5D2eryi+MdOsDlGpE12lmo8HRbxUUAnnj3rbXFeEVcSKV3SEaw0TySJPdpVUd,iv:/v2s7x7MoENpQsJOqhBdXoErLrLAMy40+wnMkeTVKWE=,tag:PCWhYmgO/MWLDXLUW+bcYA==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:O1sD/XMAFw==,iv:OLXHYCI/LIhgWBhG1l8SlMRZbNmYIFX1aPmCCDnjRf4=,tag:8Kg6sFEZxz4vclB1rG3UAA==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:B7FdCBZFfGaoNfCXwqYcgpf9zvw=,iv:j3WngM4cgJeM+G+OJIPOtfH9fZYwVN61RZk3S0Dj9F0=,tag:Xvncb7wvCg9mEJN17yTYLA==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:oqvNQ1/pXIqX1UA=,iv:OQY6CpGwUBCL7m4iv1ga4Klb49Wmpx8wGX1YAurBadg=,tag:qFg3uPRZaGzb4O330kVNpw==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:V81rg/ovWXO9YUrYDMFc,iv:3EmkOyzAS2aU8NUTtEg6UOmITSQzu2hdNn3DckeZ3h0=,tag:kmvfrBmva2HCexIQgzKMzQ==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:sCO02kgNp7Wy5OnweJ6xFLndvBq3kvkMuw==,iv:sh56WU2HGw+Wh77nTA4fGU9DwzttCoJfbSOY7WoT8v0=,tag:OjjUGsGLoqEUBS1cKdDBsQ==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:hxzeHHdYlmQLGtIBp0Ra5LJEsxbPbkeopTVvX1PSaA==,iv:kRkpDfLfMtGD1MVeVA9uz/mYs4eKXoM2NWqEvcLP7K4=,tag:vQrMITwPtTG5sUVzwQE0Bg==,type:str]
-#ENC[AES256_GCM,data:76FnjDvhOOfvW3Z8ya6uMNImia+4UjPX8okDo+sQvMTSC/dvYsg=,iv:HFmwPVztb62c5xKljMcp7eGS9xvqkSR1C0HC0gJ5yyg=,tag:2YQzoZlEkAz7QgRK+7GcEA==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:WRxdJPgzN3Nf2BqeSg/46inNrhc=,iv:c7H7hdlDptCKRXBMv1pJI/8xXF0kzriSZpVVhglkctQ=,tag:GynE3NZ+hVE5qFyjeU3Aew==,type:str]
-#ENC[AES256_GCM,data:XrOuJflysUh4GPomU08=,iv:p8LIIdKA3GStOR9X4ESNFDMmsrD3M9+ghwUEEOhw0lQ=,tag:Jr56vAJgPyHyWfn3OZle5Q==,type:comment]
-PODNET: ENC[AES256_GCM,data:DXf8fjKbNCV8QbUmgQ==,iv:6lA+ivw5Cl52fQEHyLz9/cmj8z8ZO4MSUc+01DDK60w=,tag:u51MdHw9FOhDHpgZhOS6Sw==,type:str]
-SVCNET: ENC[AES256_GCM,data:iH/ofA9M3rc8n+vYLQ==,iv:kETCQGe9yrJ5Brdx139JB6qBCg6NK8IrxvDw5ho1Ls0=,tag:GkFyh+sqiTJxSN+3iZkuIQ==,type:str]
+#ENC[AES256_GCM,data:V6TcvZJAmoGGx7QG1wG+e+vjBWMrl7ezWmWt/B+OWsxuLUUvvQhgQABJL6DX1wBtyUbOUazCPkZwQukiXRdjNXs=,iv:kEeUGDHb5Rp1lf5v3E4IX6vJWs/cftJTDDUGO4zOwz8=,tag:y6ZShcTOtzzjNV5YntwtlA==,type:comment]
+#ENC[AES256_GCM,data:EVA+ad/wR8wR4BLTuUxwv+zpP692ZUXw5Q+RywnFgltwDqAKdII7JV12OFw=,iv:2kWFUTry3mmdE0YhaZlbYhu0lJ/hD2qGssdQpBMz0QI=,tag:CBO3gdZZNF18MVUe4X8K5g==,type:comment]
+VIP: ENC[AES256_GCM,data:yhtVcKRwylpZCwBMvw==,iv:TxbRhvPbEIN5oAJE0sUKloSWyqxpS5myPPI814ngCkg=,tag:to6RlD8/CC1QNtOV2/IIbQ==,type:str]
+#ENC[AES256_GCM,data:wBx+1Nes9YgJ3M631kOagGTxKCwUiPDQOHKx,iv:Pt0LXGYJlce8OU+jumPDApHLtBAiW/O16TUb3yd7d7s=,tag:/Zwfu1TFphY5P5zxMTMl3w==,type:comment]
+#ENC[AES256_GCM,data:rb31cpjHGDuu8vdcybXxuuBBeDOtFhvywOmJEPsJGnztvw7nt1nQn1n3iF3CRBc2abPj+leSVILvgmScdaKoNN7XR9cggZbLP5z1kk/52lkT16UeCl0lVX0=,iv:x8WGfwkLeuZHdv7jm0B+uZZpJ2kMr461eK+YzBU3nb4=,tag:xU901ZSYpBeGlLWM9QV3XA==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:1eUm0kw2cX0pKESMxPE=,iv:L6INirNEpPXKZlFhlkRGg+/9AOC+cKjIecTYjlkpu4k=,tag:HMSdnQwR6Av3IIL0FdrXGQ==,type:str]
+#ENC[AES256_GCM,data:IccaZfdApNjq1DA/q+USN5AULosAVwm+9e1gDMantmO2zg==,iv:riLe4ESR+KRy8C3PzMy0oEkLEt1aBoPizWYSGApWTfc=,tag:HBv9KOf5CVecpP4arsERkg==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:0x68KVSSkTiiK45P7g==,iv:Ug/GOxmMe+57utDww56tAo5pjIiqjpPrptBhWSoa01U=,tag:WuC84lipliKJ72gfm2CeyA==,type:str]
+#ENC[AES256_GCM,data:auYSTtXxmmXO9IA5zlgIVXF6ynua/q4BRQ8ujvxGwNARsOI5yyUUvef9Lj6TduQ=,iv:CEgWvpkZii363KxhNpAiBzjhy5yye/Ha6Q1nlQxKOTA=,tag:eMaCvbtCGvgiwU22ARj7cQ==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:4xioZeP1M4tsObkD9d4a5CXgn/3Phf7MGB/B9XN+cw==,iv:/27npYhHht5HWrBM+tydNeOy6lBCg1xoussSh464dWk=,tag:6ET3v7dx7nYlQSDc5rctzA==,type:str]
+#ENC[AES256_GCM,data:ES62G1vDyr+Jn3UFbSBYj5AiFo/PT+ejf/IUdjOZ7n8q3d0uy+q9YzFNL3BDBe6B1g7TMLmkRHlpdqu1NkoYaPpKmSKLSrgJVKfX77WAUnGukg==,iv:oX8dVytITycDPkSLCRT6jz2HNzXa1pZJv97v1XvLCO4=,tag:mfLrUKGB91tlZUWthZ9xvg==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:a1QQVSPEB+2XnxG1kT+y,iv:bRQhykLqRglqAwOH5+cskpuMDH3w21GOC4gmEKD7rdk=,tag:MiK5ouRw546NeTKpz6DBgg==,type:str]
+#ENC[AES256_GCM,data:xPj9xzskD7Ufop2QykKeYLbVshR9gcYGd7Ze40zS9aEa,iv:Ok7rGmFvpSSptKheaSS0hA5jrrtaQSVcuVV6a4GXNUc=,tag:Lm4Nh1wikf73bA0AuRSI7Q==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:ZmBTq3kDg+vniMVsF5L9,iv:hqPh7QMDps2aoDq2Dcfet73nkFB+j3IlDpib+kEZH0c=,tag:GAqYcPGuqXFXli97G/w0fg==,type:str]
+#ENC[AES256_GCM,data:JODD02OxJlmxWNbbw4TII7PO9hyKQSIU7dXV4P3DjspD2C2y3oZpIWWbElxP0XtEyvldEsPrmJftHgR1SYOdJ6EXXtkpkSpGTpn3CI56m/g=,iv:XGnT4GiJKO1hS+eEvL/vcE6zUYSTubMSozAGHR5T5iM=,tag:T+MPBzHaxCrYRODvpDSxMg==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:z0fj72eceCaK2GFLlQEY,iv:OXo9BNjDvpZamOyvOgy8dUx14gsD9pOcO4KKEUDto6g=,tag:IeFE406b0hbN6W0L4VYIAA==,type:str]
+#ENC[AES256_GCM,data:78r/uGRfOuqkKyaXwOjG3QjdyaakLCnqiRJl5unvTipFFGpp5ejMiriig36IRa7TAXn8SVDGO3TcyNvR4fJvWE9ua7LHKX7qIEeLfb7CqhGV54x+ftkb,iv:RN12wDs3v97ROVYKB5xWukcQu3xrouHP2g8oR+zJsVE=,tag:K7LpZCYKWTrNQ++OdR7m4Q==,type:comment]
+#ENC[AES256_GCM,data:GeBnQHVAM5uM24L5zOOwwxwdm1Umn0ZxNOHeR8uU0SxhmUx8PjJbIbU6PRQUz/jM7YXcqD8qJhoR6bRuayJYifOI2ImVWf1yzKYltQ8yH+UiiKmY5U2JK+LJto912QXM64tYWAz7cgxHahSawyMrhckiXcG+lBhqzQg7Iw==,iv:jcNzzqQuaXnkTHep7Ybqsayo58CVWnReMb41EYt04oI=,tag:7zopeUHa5T7201YYiLIVpg==,type:comment]
+#ENC[AES256_GCM,data:+54v3Z3TRztkG4P4s8Hx2msz4tg1PI4lUVk7T2h8NiB8T6pZHz7SU//MevJ2MJyJsYvRgljf2sj6ykpsD/GcwPHFXdgUUsGMSAwi3BnUg+g=,iv:9EF/RJNJ+FbPfkceLY0Zgc8eKtHyH9krRFx62gZbxZg=,tag:ldZswDbUDSSMJV5vKWp8Ow==,type:comment]
+#ENC[AES256_GCM,data:Nfx8LTq6njHdLoj1EJ7Ti8VSCVWS5LXAFQEia6hLO6e1tDMrV31XlYc/6LqIjOASVHRPYesn,iv:xsSCT7zj6QsPLIu4JWKVewv4Jg4DkK54ZWih0C3fhN0=,tag:E7ZxCDPC4UWJraARcBxjrw==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:CS82VBP+eQePo6wQ,iv:zogLWr0IFMwPtlqSYLisS49a/CjMWqAPcYCASiUwj80=,tag:rG2BSPrV4D07c9EZ1US0vw==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:0eRT7B/Y/DetX/zFTMOqA6A=,iv:ntdkvAI3P+y4q3CewIjW4NaHHG3+07R7SAd+RNW6ecI=,tag:HRYOnuWgPc0TlHWu/d26Gg==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:6oV+FRbGiwqrhRU4aIokHCo0CV7s8CV/tK5/Y5+F3ic=,iv:WiSPtg49s5iCAbA0Kc1emAnDZNKb2ZBX+5dOmx7/XLA=,tag:aca3SZ/MfQ0sc22CcZu85g==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:OenLZwl2lgfBnSbP93C+7nroMFXaRfSjW4GyA7kz+XFeOgU+1aMttw==,iv:Q531a+arHXKmMyUQQ911l3P00LY3khQ5jfNiamA18zQ=,tag:kJM5LnlKybCmx3NYEtZGeg==,type:str]
+#ENC[AES256_GCM,data:V8lKv9R/M4Owf7ibnMME7mwak3lWCdiwVr+WFb+lOIhPGvxcvBNU0uq3ucXbZoxkGXudpm7ycfo5BKCOaRkpPw==,iv:7MYa5NtFzBnwkoDohNzPks1nTvJzgWIzF7zwYMvQZk0=,tag:UShx1OvqISBOCE/rSXrMwA==,type:comment]
+#ENC[AES256_GCM,data:+j4xqMfaalO0UHvrkJqpRLMXu1rMTUJq4mIfYnI2YYOkDTrJnlh0Ohq+PUWuKcyH4GaY2lghPqI=,iv:jmafo/KAEZMIvfGPSYJKX3eVSJgoR/7UL7ncL32CMZE=,tag:qyjRf4NzMa9fxUcyvVql+Q==,type:comment]
+#ENC[AES256_GCM,data:WfjVjrg8fLsaxNsVeB5A/P58gPkuQKphKw==,iv:QT/7RRX8Vlr2kaIkavllpLc4LTvbghRDGw3MbDHh+GQ=,tag:LxARK0mv5If9AqTEAigdGA==,type:comment]
+#ENC[AES256_GCM,data:asNOmpnLS22V4Omzl+7IM6x/XCpi3C1pgXE3Yz5rQrIBfj6jq9/wCgcn04bwR20/GgRyYBwvhYnk8+3NlY0Xj0rGw7m/ePuXtb5ofQI=,iv:B6PFyfHdHxYhEZ+vEGBA3LCKeAg5oRWSuoLuvTdQXHM=,tag:XC9nPz5clIAilGY9qx8nig==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:8ef0Ej7WrWwKNIKikq/6j7LeOlc9eMUkCGc/RBlFNgGx+PbSW35Snq5c7uCDekoZ,iv:a1NnwbHfYaf2dsHqiFaRdEQgb3W+exzd3pBMKaSwdDs=,tag:XkjC6qaGPYB1qUZOJONFFw==,type:str]
+#ENC[AES256_GCM,data:Bmu/Hr5q4qrAclahFRgFL1c4poJ41LwboVNynfqx0eVKliQvCeoOOecnrv6rAV+wrmEcBoGUXx4o6Ob0rItdHkFKhCvkg8Q=,iv:GWa17yuw6IxJQuWPVhqtvlRg22pVKcmzLYhmljCTrJo=,tag:736rtJiHlnfwJ1jkQAw78g==,type:comment]
+#ENC[AES256_GCM,data:VwJ0LYNmtTQ+5EqmlXUFLUzQKwm/MNBmACaqmR/2oOv5DGOX0oMTzM8LpjJxe/7HfdvKfOwb,iv:wyYJNuZr6RZkv9QD72/QXXazhGgd1BSFi28dz9R1AbM=,tag:K4BT3HpN/Z40KkBWgOCp7A==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:H3jXqb4/Kw==,iv:FKaBGXdJq9uBbWbhgjqwSZbUm5eXFHoWyrnost9e+Eo=,tag:gwS8RNyE06sCd1oT6DuiCw==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:4Q73RN5ujEIHTPgQi8IFYnizusI=,iv:NoJdQCuRfZqS+pxA9j0MDEnE+LRMxGZ6Tg2yEg3waDs=,tag:jfuDmpzUFD5HR++liN6UvQ==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:PvUQIqbx8FRghgE=,iv:Dxe9svt4XxNAhh+Upuq2tfp+3ymm/O5b27QMR7k9u08=,tag:IBc8d573xvER+WPHqzkRNA==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:c6TKf/KbtHN8nTvOsS/X,iv:C5rJtJjjDsjpoTknQzRFKLFdgyh9MO9vEqlcPPR1y3c=,tag:7BisB6E66hKYz/2wun2dSQ==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:9kPHDfwWFpgKeYIepFXVK3q2g2KB7oFWzw==,iv:h7vXH1jVmGF2pw/ym+FyH1MUcLZiR04g1qwRUNlEYAY=,tag:UUZiWwY2EVkjOjM+1IaiEg==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:6w82gsLDJDE7W+rYEOforLhrZ0YbM90OQ9YfBGJN1Q==,iv:69A2r79PJnxVbDISjNQj0iERRuWB5nc8ATBJgSKVATY=,tag:6F8JNjpGSUGKCWzF7RBp9Q==,type:str]
+#ENC[AES256_GCM,data:hnSb4c2urklCxKriQelE/0FCAG+wJ71k90QGSzvn5+QWSYtezy8=,iv:qs6fyVlp7dUb6XyYRHwDoZ8odnyhj4+2BuD1BfEl2/k=,tag:+AqSX+DvZsrt1Tdd0P7Wdg==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:6EX8aWmy2Jt3jd817AXQcXzLCck=,iv:o4SE7Vd54NrFXoQY0qc4j12w+RlqwaZXGNieyUDqN2I=,tag:sOl+v00mOW9iTS8aMf78fg==,type:str]
+#ENC[AES256_GCM,data:Mr8qIdKhPab5ZHvXNWc=,iv:VdDve240T8sLLaNTq7eaCXkDYACv8uNS8MU1iW+DQ/A=,tag:vHS4u6uF7ybV08QuMZiyeg==,type:comment]
+PODNET: ENC[AES256_GCM,data:9krbicTUuvKnbgUGLQ==,iv:9zNcLrApI5A3+s+B31KTB7K/MBYAhwHjgemm8uax1Bs=,tag:3GuxPMc9VfJawDUJbBLi6g==,type:str]
+SVCNET: ENC[AES256_GCM,data:7JZmGpK64E1cTlKxCw==,iv:bbKlJQ8QoUIVlRxWzVa8dL7prcInAS9KrF46LJE9Fj0=,tag:SeO/J4mGxCQoqgoOdxB3SQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRRGtpeTM3S1ZtZmRxeXda
-            MWlTV0c5Wmc0a3ZjbU5zN0szUDJCOWdxQUdJCmtEbFRCWlhjQ2VBN0w3RUVzYmh1
-            U1FlOUI4M0pLcmRkQVN4MDNLZlNydm8KLS0tIDNrYTFtNnhzWS94V1ZvRUZiZjFy
-            RmhGMjAzeStKTHJWQk9OWXB0dnBOR0kKOEhnZQnIMwJztwVQvSW3nxeXYjRyntPW
-            eEo5VPF+h2G6GZ2DPc2srInqy9SvIsTVrgOA2XJTL1oEv7JMLi+WWg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPcjd0b2J2Sk80ajBrb2Zu
+            UVlsRUZGUnJRSHZEUWZqQ3E5V1JxbFBNQ1gwCnZadnpkNWpJTUg0RmhEQ1BGdUNp
+            SmExcHU5Z1QrT3BtQ08rMHdTQXRhWlEKLS0tICtONnYzTkx4MFo4QlU4VTFScE5y
+            L2tFeHpmRG81YjBVQ21pN0VzZXFzSDAK0BekYN5Y/wT5FI7cf4SinU0JVcdY94T1
+            cmnhL4mAD5VNAoMhHZ09n/nOFnSEprWRgeSWEx+Ect+A78yZ0TQCbA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-20T08:04:46Z"
-    mac: ENC[AES256_GCM,data:hCdB4xmIHCHFs4X+KE8cPciGBwn4ElOoxUNoXa85EWU2ziy5jXAlf04k3LgySpO0aF8jDnRXu1I6YTmt2Ie1Rgw/LHmwlH1e8SogfVX0CHDgoGSekczPBo1UT2hicK6QtsAu0O1iz6JNXiQEIClKfAxGWsnqT9DW+n3kYJI4tFk=,iv:SewPc4wZ60o1xW7a1Yp63KpJ264kKUldn6jFG3MBen4=,tag:OmnGZna+TPBh0Lg4b5o8WQ==,type:str]
+    lastmodified: "2025-01-20T08:07:13Z"
+    mac: ENC[AES256_GCM,data:FgWzECGessm9zOpsd/iSbV2QoV4X00TTeuB1lL9dnkylRQXEjpeb6GccrMYMe4q5m6Fx/BHSKIpQ1v0IuCvTeBf192ydxsk7kg9sS54bDVDHeZV3XJiqXz6Bj/KGyO1dW621PtfbuiVLVjhPKkmxKaKGPvMRyuklXipk6/eMiKs=,iv:v3N1V9uU9JhyEoHOJ3E62FRsKLmUe6QtMTPvKsfZ2pM=,tag:U0e1HkJHdkc47q+1Wrk0Fg==,type:str]
     pgp: []
     version: 3.9.2
