--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:vC7YYGpG6lsZ0kk8k6myR4LKPszFqKr5ocJrVLN68QHgzT425UI+K2mM9IMKvdHbbzVGNQMeNILUgQAvapVo/dw=,iv:zIR2E60LMmhTKgFHKro+WPj6oxzksPoZFF3nB4YQHEo=,tag:u5GlyorNvVnrnhVM6NI3fA==,type:comment]
-    #ENC[AES256_GCM,data:Ph/8h9XcnRTa0+zNe83TTd7AMU5WCz8GkaxpwL1R7v8DvUMHwRNTtY2D11I=,iv:pOchpKtfSoRF8Bc1aFAExBf4RVzBumqvzZl7oSHQHFI=,tag:68CDBqhrEN2UlYJK01b19A==,type:comment]
-    VIP: ENC[AES256_GCM,data:8dEfYwrLM9XajHUCEA==,iv:oelrw3TPQVp5HRE3xcvaZXrcBTnz6qiNSQHuzBcCmA4=,tag:rHbb5INIm056RdIQHvS6Lw==,type:str]
-    #ENC[AES256_GCM,data:Za5FkJsj7vU78KJE8Xuzt7PYpljk7ixnVAXK,iv:UjmnNG1TKXh1HnKTVNGzlbz9ulMGX1LyDujQ4hwB5J0=,tag:BBoFKboqVKZh/igGT4+FXg==,type:comment]
-    #ENC[AES256_GCM,data:ov46vObID0QDsm+PcboP7RrY6arXwtkGvCg48Ly0tiszoXFRif7BZEW9kWeTgWhR0feRzPzvIOPQYyT7uPgvOCJilSFfN4swsIw0HxMDswkEWip49/u/YjA=,iv:mp3XYIsyzUeYgzjSWzs3aOiRDlqJEPjCeW/7E8FAcCo=,tag:ruGmDJXWPtkLg45gLtn9bA==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:F8SfTCZCWlxIgB5M1PE=,iv:7ItGwEDR9IAniOUGf6EYR18Bncx0zy5kzYlYsPyTlUQ=,tag:QUa6U9vv2LZY4XpQd4nrSg==,type:str]
-    #ENC[AES256_GCM,data:VNEHQGP8crJOtKcM5sgjRE2yPARGpMQ5CufjnbArQv5rxg==,iv:nnPoWLzYc2RQkUd3VJFYRQc92ih7Ioa8WRXU8vtFxV8=,tag:Zm4USTkPzFRie2fvn9Lnbw==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:lsju3wt4/4Rmct9DeA==,iv:n/chs6tf3oYbQGAa6eO2y6pSTujCFFOaQptdL62h7eU=,tag:OeaC78msDouygbBNyZiH5g==,type:str]
-    #ENC[AES256_GCM,data:e7gEtGHdD6qaa3fJsLvmKPpFbu2/ogvNw2eOPeNvlzedVD7zIVDtDIJRvZ2622Q=,iv:z/t4oWRk3jyVNOxKK3D91EDrFwfIL0Djg5o5iqZmBEo=,tag:iDhGd2gOgBB8jbxKj0dTQQ==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:QU1sWeE4wGSWOXwyqfIRzmcfL131hxehbJV7pGfr3A==,iv:TSY0ktMV3OVVPghOzrfwmxFVFDj7coE0Vla6jpYlfZc=,tag:6xW3A+QKeIHACweQIEGerw==,type:str]
-    #ENC[AES256_GCM,data:AaSLHS6Oke5JY1HzlEhhoedh53UuaR9idxZJqc16/cG7wozjo5VZV1PVZRbycygG0pjH08AzirP/Xp8VD0Fl+ZRt5Lbg8rAUlTpcrqF+dWlwlw==,iv:GAsUuUWAvRaxYuQLTEWKDW5KqAzLfUz0T30VrSjq7YM=,tag:0SHHfnMPqDhJtwQ1RgMvTw==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:8hWSVNBtifie1pRFBGVl,iv:fBPFd9smUWzq6GVvVCd5SWncgkKpTFbhMJdqLJmkmSk=,tag:VAenX3W7231M06yw656Juw==,type:str]
-    #ENC[AES256_GCM,data:x0S6mj3wfr/h/fFFGu7RB7qtJgyI8M3Wq6of0nGAnI4A,iv:rH9SJXyEZPBI1Ay5rjjNRQZj4ssgiV2IEjwPIQAqpZA=,tag:JR50EcXReZB0V91U55lzMw==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:7QPo+IEZwrVUJA9YdnSO,iv:3WMtmlgoMPNIas/kCdslVI4OAkF/KKex0D1tTmdan7k=,tag:5rqDUl7iN48eCg1x3cux3A==,type:str]
-    #ENC[AES256_GCM,data:YZp9/jyan9ZqEqUzhnjMNXXIjAZu6q5kV5qeIEHxdks0G06+1Tqx8ZCx6n/wHypxcUNrkmOuoa6c8jGq0HJVxHkclq7eyXaQkV3c+Q4gqV4=,iv:O8ehqA1JwspOmeaDlmeXiu6pnIhucqfpxxrJsjMMAEM=,tag:gBM8Vqaa5dWdWjVlOZFs9w==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:19ytmXFId6wJYtGpNBys,iv:3rAVh/HmgxLPpxpReAK0cCRCcK4IoFtRWkq9L65JnEM=,tag:Ip74y7USTEJQ4arb8XSfYQ==,type:str]
-    #ENC[AES256_GCM,data:83rtWqcJqqDTJXxge+WZASaEgGDA7uX7J8YFcWJ0pXYS1m6S1/BPtwChKS0GGrwTBk0dvE/uGDLNYNojnWIvvuXTRw208T9aJtDqYg2boAjWZsS8qSXb,iv:QLVg8vxUX3HOT+oRH22qIIpQdCOARUpzOzcNOFz4sak=,tag:BpuYR8k27Y0REaH+KXTmLQ==,type:comment]
-    #ENC[AES256_GCM,data:o4e9UJIaOrKXNCmh59UXOWTRAho2cmK8gcgaE5kko6IYxNaYScK6A0UXZF3Vh0chgsgYOkzcnRxdhazhllezzaDmusAMoo4VflFbTXD3gm9ODFFwa4DgKVmqbA7up/irv1uMURytUTuh/m//vtKxeu0JSsUSTFqS8yy1Aw==,iv:8L4RLkymmDWpinjvQiR+4keRaLyzTFAwmvfdLtch3p0=,tag:wcUvhmqosJv6haWEeZAHdg==,type:comment]
-    #ENC[AES256_GCM,data:Dl2UngUNHjE8E0Paf5peBLHw5q956eYOKhAPRGccAAP2aR4CsnGfEzLIIcEtcD/WmvoAtmnESVJxkqRVTLx3go2tuwBfZTFIwq1PdWKS3Hs=,iv:KTjC8qannfuJNcp5lB60W7OorcGInLoytx5Q1qnaR6s=,tag:6ycPimaA9c/e1eExk6i6BA==,type:comment]
-    #ENC[AES256_GCM,data:at5ZV1d2Q0bMNIYVDkB9saJGmmkkvmoZNOTqs0zUC2IQKerjF3zOZtxDJiwN8QvVNTyl/izJ,iv:t1KkABMqM6UMwz8bGqFqrmSEAMrgYZLQtwfjfCA6Eic=,tag:qeNGDQLNDDUXBqEEa5rRQQ==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:P9lfouRfsqVuIvKB,iv:lUFGREEyDraKq5YzvfSLLQd6R+Dzb28vFzzsKgOttNU=,tag:Q26R9ysD3X65v6MkF4X6uA==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:PHzeK80M6e41Gi57YhYUuDU=,iv:dIzClHSfK55x6wSHmzih/wtWDPhnUYMkTOCwtmrPOSQ=,tag:15Emx7c1YZwc5sliixtoPg==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:FDhDWyfrhAGEmTceREDdK4QSDRPXYyhUIxsygNsdPcI=,iv:C8w4jvLHxPJr871TcT96AioS7JH7Y2lFql1s4fbobbY=,tag:r6hwr6zy1DU9va8EjkfTcA==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:49Ml+gjmXYjcLd/aXkDVSah9FdCX8JFDZldXFLxEgcT4fwZRBmJV5Q==,iv:jo2geI4bFexuWgYFXATfkeV6N+GZ/J0ggfzMqPJUsM0=,tag:1E1sKyohFB7yTm1e7MP+pg==,type:str]
-    #ENC[AES256_GCM,data:0JtaJ2rQeWtQjMd0zvcosxhimFKTnaIPYf5OM/lBKdQ6LS4pb5tnBksbG2iAfvihNfjNiDWmiPYZfiF+OGJJYQ==,iv:QBfv19L9Eli9luD76noySE3RfTUWY1evaL7KDQ6gV6w=,tag:cQ7xW84rwrrSCy92oqmgkw==,type:comment]
-    #ENC[AES256_GCM,data:Tz725A9FVg3/76sM2gTFgHLePWAPgr+oW/wDs00uec1jQ8Attrf2xDXObAOy8Y4+ocPewikNkZY=,iv:QyTJ2gZU0SO+1yNCa3Ej9gQ54+whoXqkNrg84trBePw=,tag:DLruQsmBTH3MO5nI3gpa0Q==,type:comment]
-    #ENC[AES256_GCM,data:Ut6xGerVkuUwvKFe42SKpTxRz1/ybpMUPw==,iv:GyA18jxCkhd33yeVl5gISLiQ+XSNHZRD//2guVAI5dE=,tag:9+bRexsQMw2R4O6OEIb6+A==,type:comment]
-    #ENC[AES256_GCM,data:/QTcCJjyei+rYh9qbdEp4Q3I63/ZT0ntdRI2OZrBYCryTrjvgTd0VUfOkg6qykV6Sb5Y/vGOgHzoN+fHqzTST10LYjHRYxhSSHT+nJA=,iv:937LwLm0P5Ng00u5otZUTOEQ55q3JWp6TwLlqcsBYRw=,tag:R0/bE6/HnC37Pc6hpfJ3Hw==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:bMh9+CJe0st4RLyaCPVIrovzVFJVAL+dnMqxZx06tUVv4vluC126B8o09SwFRo5S,iv:HVdCE99pLvyqS1U4TBRT/lbo7kChH/jb93onKaAxALk=,tag:0vepDs2SsfQGlWzkFAZk9w==,type:str]
-    #ENC[AES256_GCM,data:BHeDakZ6qoKMoQt3xcPcKRW1sS2NDSZMnICx/D1BjGZBqGhJaEOsPDe6Zy6xc+2HVEioFfuySCYEHwuYCfzEl94mOVZtQZM=,iv:ANGiXNk3wEawBHEyQhKqmQeVm9BdGOJqo/PxdNTTLBE=,tag:54haKFDu5Uwa5FaMLuq7xQ==,type:comment]
-    #ENC[AES256_GCM,data:8wvcdprCTEnP1iT7rxHI2pVbDkLW9u6MfiFQg3RYmEINGRUhvKE8sQNLOHVC4cFJ+vmCY4kS,iv:DFAODHTQaMEqraRTqn3leql2hvvhvISHI5weEbN4XFc=,tag:WrD/TDcZEZnYjUYbFD9IZA==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:ryHNEH/JQw==,iv:jXJ/t5WTZoMFEf1dEcF5ZRkiIuiP+M9FglWHWxtHvxc=,tag:h1hWv/gDPb1GNNJeYNUiRg==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:xvFbgFvs7OIeN37GgXaFgQl4n9g=,iv:BqC2fidWzbpZ5VU0JqaO7AmqmFlmfpm236KxOegjKsw=,tag:7rTfnxMPYBgJzutdnnRiGA==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:Sbfdnags3CD4K6I=,iv:1Oh/DYM++U5l4torailRRFFc0tAF6JBKjcs+mEuXMr0=,tag:Rxk2uU/KsQqYvMcW9PJ/aA==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:0f+0cXoFUxUJXkLJ1czO,iv:XJu5+Ntkq1AOFzroXmq4Doi5P0kcXILl4pVwC/zpljg=,tag:1eqSRS44DJGFFvZaO3hXnA==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:VuN0ar4GO2p26fELhJPykljgd6Ja/OoQdw==,iv:GP0u65Fv4a/MkYJ+pZozq0ZEBPTBKSbLtQ7v0CU+xKo=,tag:9vJsCgUTMeyLt35bm2T6yg==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:xwdJnd/vZQpSq2DmlWYW4vCcBesqfYXOZWHKtYuXww==,iv:3cQ7k37RE2kBrfHbLSv4SMrKuAcaTYkUhwBx9/oK8u0=,tag:T3cbLrw9XAEnWIWFekn5qg==,type:str]
-    #ENC[AES256_GCM,data:p3MX8Rl0suR1oBdRuOOitngVBcjtujuUBzgMKSb4TMnKW+bvJOI=,iv:CL3yBmYYin5zN2kTRkrfnjz/bl4/UrVcbUwYMnqPAN4=,tag:NBbkLM3R+s/wKO8F53K35A==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:yhzFcQEO5TmXUl3exjZrVPy4BKE=,iv:RUCqzbeaj7JL2wiP0AtrYPXF5Is897isIMTY4v6slTQ=,tag:Y3ZPA73C/XiK96j6Zw2wxg==,type:str]
-    #ENC[AES256_GCM,data:edLS8Ss1SCehc8B347s=,iv:y9rne4/BYyxjpS4yBa2TpDcY6axX7UsPjJJORB9rklU=,tag:pxPLtuIsFjPGrKjgvyiQqQ==,type:comment]
-    PODNET: ENC[AES256_GCM,data:PPp2xpErktTCFvSO2Q==,iv:gbaa75ArL/jDoWfIOM8vsKzIa5adh58MjLsJ6jugv3o=,tag:YfU78zyYsr057KqFWI+cmQ==,type:str]
-    SVCNET: ENC[AES256_GCM,data:aXu1dGsnfAWEx/EaHg==,iv:3OoUzWxT0J3hg26KSfMPBO1VGiSK66SzPJ+go1wEOhE=,tag:DhrcMW4usClalUVMaV4CzA==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:Sl56ow==,iv:7NQcMNN9FC3fHFv9Mad7rai6qugnmpE8DkPOlmKRyZI=,tag:+olZlySF1n/3hx0LWuhS1Q==,type:str]
+    #ENC[AES256_GCM,data:ySIYUvU79VMr4B70TIkp8VEPubdLc/0+FzYfcCWPQENRfDC2lRd8mpmCABaVTFFsnu3fH/K8pShQcFGLi3FNgCw=,iv:EwcdSusXIrNnjqXPGmEXLPsnjJFlRrPc0COHKNXoYrw=,tag:IgTDp1oDekCCGHPeLwGkWg==,type:comment]
+    #ENC[AES256_GCM,data:EBpTufXVZ2jkVm27Do6L0CElB1Fz21o2S4PQOVnVHQKIBz+JRrNKSI4GnmA=,iv:3kTUZCn5g09mGOg2cGT/S0nzyAgdFn6E433+ovYrssA=,tag:4RAIbByECWLlrnJ02xhk1A==,type:comment]
+    VIP: ENC[AES256_GCM,data:Eqbwg2542cSU8Mc3Xw==,iv:EgvPA/qLq4yZeCBZvPL/e9uGkQ0RAolvN4DowHECD2c=,tag:fRhqzdpg6NqLD9/MnkoUiA==,type:str]
+    #ENC[AES256_GCM,data:SslzHDg5/76RyZJvsJKJsSDIqaxptICBIaez,iv:+zGyldgou2TWLxlM6AZC9SYdb8Ccs/bzg2W3AQlYmIA=,tag:9ONmIuTVoyiM5LVYTN12/g==,type:comment]
+    #ENC[AES256_GCM,data:wt4ASCSINqnyRvEfIBi/Ld4YxLDRRQbuWXO8DWmBXLiMGpkpsmskTfLyEYkCikoov7kSYW21SfeFI5SxXiwcM89CTGLeulCDYspFkO5KXL8mSq0UYv3ZNZk=,iv:GLlvlMJp0D1mxz2tDVkOTO4Sf3vhttKFehyydCgQ2n0=,tag:wbyzie4IMbfYs1gtF8aPxg==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:6Tlvlx6K7IMByTc/bHs=,iv:hUyuKWEtfRhMjAQqWyEmgd/sOgtFJ25XTL2+WCGNbXQ=,tag:QKpKL9VcW6ByBDC+i/5PaQ==,type:str]
+    #ENC[AES256_GCM,data:6+Tk4a2KL4vEFxyX0kaxhvMdg9jDCTceIWL+fIGiqRb2uA==,iv:0Csb6wtNfLF2B7fCEGakCa4q1Jx6idWdcg8XMtwdP3w=,tag:NyLJTEt49ZharlQF4reHDg==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:Evq5imYwLgjGJjGUSQ==,iv:o9OWhvpbHVOg+yIMAUxS9Hj+l/qD7hOq62rqsxL4Jew=,tag:+c8xgUI3t7hzabfeWcL9Aw==,type:str]
+    #ENC[AES256_GCM,data:ctGALPf/gwJJVsnp6GYOEaW1zEXuo/eDhM1m4cxao9DZQyI/jxzNDufuULnvzDM=,iv:DdGAY5YwUXILtVGpstl3dJ/13DaBttmg9sw4hOBHbCE=,tag:NcN0iLh2rbvvS3nsWJMwrw==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:UwUjv8OgNoMTsYMKm+xOpMP5iuQmRme6PSpsIdMrGw==,iv:Z5T8rgdiFQa8kJz901Wvvzxc09p9vjnHe22nOF7c7nE=,tag:4XxYT6xPinVDwLQBRMvZzQ==,type:str]
+    #ENC[AES256_GCM,data:4+xevNnf3+kqhwusfccF5jmcMNLlfDhQOV/lq21K/HqgxctZHDRM/7UH7gKIYcl1TTHBYbOd8foKanpvIS5NuBJGOiXHpgjWVZJxF9SjHaIQ0g==,iv:0iAaG8Ose4fPBPjpJLllIGa8rBT2aqCcBqSXrOx2AGg=,tag:tQ2jEeqInK+GVnWqmspuJw==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:r9+U5KPP+fUFO0shGx6o,iv:En1/vDwnNW2z/ycTfKcmlT1jyqrCAaM346H/FT57Tp4=,tag:3Bc4H6cd96rB4iuyxmzjTQ==,type:str]
+    #ENC[AES256_GCM,data:YJVbPLilrJRAHc/Y43aB3FjonW0jb81w2TOkc9Lb3yJi,iv:khWuFpMBrGT8WmMdlu4GejGj8mOa734jPlpZ5QvblMo=,tag:nwGogUvmRk+fXHPBW07k0A==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:b7A2D6OF5RDXh7GgkcKe,iv:eJD1NtAJAsHRi8T+znWpwfzjasI3soTWbpCNWAZpWpM=,tag:J4CSzC3Lj055d9Pc4o/V0g==,type:str]
+    #ENC[AES256_GCM,data:bKBbeVXdZ7JDbQEPPS2gAonjmUmN+EvyGCbUETf4ijiVU26piasd0+kW9wFLmJL2Tx3AQoQnDsYJMeJAPpUynba8d7pLDjXM8KDG5gUt3Fc=,iv:KXashyEVGh+4TiZC6Zn44gMVmhg1n9SApPl9iheyFso=,tag:lKXTf1UxSzk2pru/PVQVWg==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:q6nWyQQRbX4fY3HBDsqC,iv:IuMxprcqjwERtadPEA+4bm94xeXYAcAoEImC0coEnXo=,tag:kI7dJk9UGjrKo2PPbwtbpA==,type:str]
+    #ENC[AES256_GCM,data:ObqvJMhxhtOsEW+w+8Lu0ySEiD3NLn1UUbY09IG6gi4D7hxX2plh1OZPG+tlehSI1pB8DG2SofsVJgjYGrP1i7c48zli+TRFImqbpenW+4lxSNUqUad1,iv:CuG8/jq3OotF5nRnWcu/+iOph/NUCzBbHWp7kfZqxZQ=,tag:eTxYifl6nDRXAQQBfHFBMw==,type:comment]
+    #ENC[AES256_GCM,data:Ylr3Hcbwl4nuxlIDQ8AFAJNQzrPEBXkQX+DNBaNgrB7Y2cz25ehPXrEvEWQL0kwLn2iw5ccJcuGDtrXZ1OtxiEacz4L//OsKwMXZsan+zvEscLiZDG7VpS/PKd82aC/R59UxkVgZlJLLZZqpolRjGNg54yGuH7CccDuAfA==,iv:Vc0CsD6kxF01NOpAP6FyQwAA3Q9+G28npXlW0l2C2JE=,tag:QJE1gRfhXasYMiSoIqLHFA==,type:comment]
+    #ENC[AES256_GCM,data:/ab9/XyGGGeYkgaYU1mHd9oczJN3j4DNOC1eE8qY35Sc0H5Gr654dvEp6j6tjJgX+v283yASp/fNQaE11tcuEiu0OAaW7niKGjO0SF/oO1M=,iv:9giA/B4d50Af9kqwobHGQrNIqCctDU0Ooj/OEa0V7Ag=,tag:SATJEwMoVIelo1ZYoG0nYw==,type:comment]
+    #ENC[AES256_GCM,data:H4tBqkw6QP545jZCeed0BXZPSaEPyvfZhgE7be/fNkaHSrlHFtx+SeEb1Fv7l7Tq/F/+qhA4,iv:c8aegHjIznQNRdnvcct4gg85Aq549DZqeWuFL1K0B3c=,tag:rtNJ0Z6q0WwhSLJymk6ezw==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:xB9up1iNw1IWF7tD,iv:c+aLyjA70w//1TJDdUnJtTiJeP7E+bPfNEG3fer7ji8=,tag:v+VayG8zzt1MR2tBQZNUVw==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:mTPi6OiJM5QlG+Mx0H4VCUY=,iv:d64AhnHY91+6FqvQTR38RDkC/011ZYNqDrr58ZwXYws=,tag:TCnebY5YTVti9Cp32EpiQw==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:qW1f4Q9S8cN+1WiPBjQs7vHB0limloB9qfGk6+GpNaM=,iv:3J6WO2ioU7VsCqyzSi+BDLqSNYoIJA58LQC060IcsIU=,tag:8IL6yjTazDR8ISWVmZSkDA==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:y/KLgXqgZ5MlBl3dTwp/IPLOrxfNrB2D2K8ZWf8RLMiP0OQ2tk63zA==,iv:jmywraZoHc3gV/aBqSs8xx7DV+OiRc4NJLxHXZzTkiM=,tag:wd8DcA6TmdFScq6E+Yk/aA==,type:str]
+    #ENC[AES256_GCM,data:VwI6niwPwsMSXig43hxfYmn0WCnfsKv1e1W+A5kaMXrh6YiExX9g/Odw8s3X6VxyyTtZ5RXrHGVy5og11GNCPQ==,iv:6W+D4JPncf2VvOE6r+P1zSCfXwKPCsm2R5erTe+UeLU=,tag:DxktBvEPZzPwSe1dI290uw==,type:comment]
+    #ENC[AES256_GCM,data:fhbf8bLQ28UtUQL3gjaP2G6ULN3LrRXTN1pkn40+BZwBisDl/ngnL+ET46FDFAgMBEzA9VzheUw=,iv:ZtEZt+K4P55IC4N1A7iQywfOHQxnO02WXuHN6l5rmK8=,tag:vQ+z6aOYFvpgRBJTjHKaxQ==,type:comment]
+    #ENC[AES256_GCM,data:L7mxr6IZHn3pJaH2i0Asr7cr/DMma1IDKQ==,iv:Tu1ltEbE+b/0LHlVtPLQ0+yNax0WNBFbAxbSmM/VPxI=,tag:pPslZLhXsJv8Gu+K6dLDVw==,type:comment]
+    #ENC[AES256_GCM,data:DIwjX+Jk9aogDuSZnQiYORU6xgcyXp4f14+FS8JS9fj35ytx+azFPHzc+8pU5BtlrEBUS7dXH7PBv/NGVlCj/+qGeL4sMTDviG0uC24=,iv:LTBw1li2fzcKc27KJtel57KpzXDEmiK+rN8vQh0efyM=,tag:NShL0MR/kf4WDZAh+6dd8Q==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:dK7mJWNh9jWCxaPYs5eJlMLSz2nNll8Bh97z4T3AzPQW9zfIkQTG4QFyc7NlWwpG,iv:dTZ/mZT28qoHLD1/CQAr0guzcEAAZUrkMqIdS4+awag=,tag:zug78VH3Tvd3HLYlC9dFoA==,type:str]
+    #ENC[AES256_GCM,data:8bh38VcB7LXLhRFig2GlfRWT2DWEgYJgg7N9VUpXSBdqsC0JjEUQk5WMvmQrpHi4HRvQdpLjf0B83pyfXLoeqG2D3jI+r1A=,iv:kSwmxU7j6vpmmt1w6UOchg5D7c//vnax7hN85gme0wo=,tag:Yo5oSl+ZfnTvcnjlPEpDHA==,type:comment]
+    #ENC[AES256_GCM,data:stJ63giWkUE7x+qhzTboouj5VYJVw9z9YnK85Zp8DY7zpKb3sXmtf6RLympNwObmpXkM1lYJ,iv:e3ajPyiJynJUL4+E4DBlIiVI5APJcH/IFuIbZcG6EvQ=,tag:EBbwjqPPJ4P/VwPu9DD7qw==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:bl00bHM0Sg==,iv:NYxCbFyCYiqJpEuxGCW7lzku3ExaR8g48EDV0mMPinA=,tag:tX4RoICc9oj6M13hglgsbA==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:3VaM19Szf+u2ee2YcpVWSyeBg7g=,iv:0iyUczKxb3G3j7WH3hgKJPpuKjqcQ+SLzIAFU5Rmejg=,tag:gg+9Eb5FkSVvZCTJhU5iKg==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:Ktc5eZ12KkexWoQ=,iv:uv4kGHDnH+KKhj9xHAXebWJw6DGx6hXt/5Y//tyDpTk=,tag:EzGzi9grVOPW6h9vxUSVBg==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:PM6Dr7akbiFo21/JWMGW,iv:jTLFKLiAdFnUtsEjCLFhFz2Il3TAgmLfCP764cHctX8=,tag:ajGrohz3RSbvXDjR9cbe2Q==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:EpfUiG8L1oI68unsVIgnKRnd5WImJG9hgg==,iv:pxuURElziIGTxAPK7mi3npXFZndZ24Qvma5ILs88jto=,tag:B3zoB2TmPuLxruCmDe73hA==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:Fx2TZ3NaWAZYG9pBJHxfBeUiX8nU2QcQEFCul6I+pw==,iv:7AuYaStE5i0EwIzUBDoAp6+oXTHa1wcxZrYBWGJrLCM=,tag:Op2hVEdNoDupHJt/wYCsHA==,type:str]
+    #ENC[AES256_GCM,data:DYSydGH+OkYmXnTMDgyzaH5WashQRCkrtZZKA4M3sCPwPD+m8OU=,iv:bDnbEbKMTLJRj988u/vXspJMqy3VtRYDBqxvu18uRtw=,tag:E/KF2TiG7bOXR1WEmQ9lAA==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:mrub6t7wxCnYVfFp3/LX06z0tTQ=,iv:jc2pRpqISS02Nukiwjwl8aYW8Zhmvk3eU/z0fRz5ewA=,tag:cmBYpsyLe4lxLDjv11c4AA==,type:str]
+    #ENC[AES256_GCM,data:oUQ5ZCVpvJzigyICxCQ=,iv:TdCQRCeywOYURjG5cHzz1hUGOW8kpovL8ikT826efW0=,tag:DHB/lf1FIWQ34Qq2DOd67g==,type:comment]
+    PODNET: ENC[AES256_GCM,data:G5KbcUilF4qk6t76Mg==,iv:xnbVSgFLENr0gA3Uyn8WxE5tngFp00mhNK9AlkRgGAI=,tag:epG4WcQULdY33OOONRVlyw==,type:str]
+    SVCNET: ENC[AES256_GCM,data:3+Ptn1MTOkDvkGsMaA==,iv:bvVymRrkId/7vSkB6O8PQlloSeo8V/oHuj55z/DYc3Y=,tag:NOGZcCP35FPfBclgTCwx5Q==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:Rezflg==,iv:WSv9UKHKeGhQCuSf4hU5c/pJ2mJNUJyj+iTo1cLaetk=,tag:4VyYeMbyudTMDGlqCrPFdw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3VWE5VHJwWDRnRXoxS05H
-            U3ZYTDJqb2JvMitscVJKUDJIWjVlQjA1Y25VCnM0VTZseFJiZkJieFRXNzVvbGJU
-            REhxWEFub2R5aFlFOFNjbWVkQXZGZjgKLS0tIGl2ZitzY2F5NjA0WEwzWk9BbHpa
-            bzdocjQ4Y1NxenJ1RkxZendEUkUxYlkKhnDhPACHt6maD9OVFEniGORzCHLWvciL
-            /fEE46d2LYSwASMuXRpceE9W4e1Na34dNul9MWAlFjFxyaaL3oMElw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwMG1mc0Q1cXJqbVZmcmpV
+            ckdmSUN1VVdGMUwvd2tWWXBTTVh4MU5RVWdRClNaelQzUjRodFBUOHRDbnFndTZS
+            WmU2cm9aUU9mVCttOHRUMXdDdXhJWHcKLS0tIEQ2WWdhb0kwWDlUanFacU5FM2tG
+            MXE3czY5UUoxQjV2aTZYNkU0elhGRHcKjB9cVf5A9TKFznuzHnZmT9t6jAoD3hF8
+            Rj2Fjt8D/fWYRORzrkHmfke593SK4YebW7G7I13ME3J4sRUsLzzfcQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-20T08:04:46Z"
-    mac: ENC[AES256_GCM,data:+GvkFI8srG/sQ5nADpZ9zebLGd/PtC6U+kDZoIiMwbYb2JjFfZLzRUuJe1EEVXU6JxL+NO1I0wQW/FkA+IMHazKI9r40ke5lsklgKYTSvdlyEwOuK05R8AkSig2nPVbB1V1M8oW2f5om7PcXTLo/Hs/uejsstwswWqK2dYPzGUU=,iv:0mbp9B8h4XzTqVWe/wNeevDXcqdQgPhKR4oNDEOjusw=,tag:+pjKn0CKAep7Kdtfi2ESsA==,type:str]
+    lastmodified: "2025-01-20T08:07:13Z"
+    mac: ENC[AES256_GCM,data:ZJYyXwaMWaLtc3W/t5Krp+E21lw5kSy0ZpFv9IzW3EzmrK1KLIgUz067Iuexae0+n1fXyKFu/gpZ6hHg/cqq2SO2v9xNk6kYQluZwMKSQCVWp0tgfUpIIiDwe99E8nOfnl0zaowdJuNHEiHGeW/RSDnCBbdYymdd5D5NWOo4c5g=,iv:69o7HL5gxQYZ1f6xZ7nDFsememZwTrEFHgk1/zuWbwI=,tag:t0XFhCbneHHLQkrgdj1/Ig==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
