--- a/clusters/main/kubernetes/apps/kustomization.yaml
+++ b/clusters/main/kubernetes/apps/kustomization.yaml
@@ -3,5 +3,5 @@ kind: Kustomization
 resources:
   - kubernetes-dashboard/ks.yaml
   - cloudflareddns/ks.yaml
-  - plex-pass/ks.yaml  - transmission-vpn
+  - plex-pass/ks.yaml
   - transmission-vpn/ks.yaml
